docs(arch): add Chapter 9 covering mobile webview audio pitfalls, CF keepalive, Gemini billing & ARM tuning